[tool.poetry]

name = "country-tools"
version = "0.1.0"
description = ""
authors = ["ecjackson1821 <ejackson@hks.harvard.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "1.1.4"
psycopg2-binary = "^2.9.10"
sqlalchemy = "2.0.22"
flask-sqlalchemy = "2.5.1"
msgpack = "^1.1.0"
ujson = "^5.10.0"
graphene = "2.1.9"
flask-graphql = "2.0.1"
gunicorn = "^23.0.0"
pandas-to-postgres = { git = "https://github.com/cid-harvard/pandas-to-postgres.git", branch = "rewrite-updates" }
werkzeug = "0.16.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
