[tool.poetry]

name = "country-tools"
version = "0.1.0"
description = ""
authors = ["ecjackson1821 <ejackson@hks.harvard.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.10"
sqlalchemy = "<2.0"
flask-sqlalchemy = "2.5.1"
msgpack = "^1.1.0"
ujson = "^5.10.0"
graphene = "2.1.9"
flask-graphql = "2.0.1"
gunicorn = "^23.0.0"
pandas-to-postgres = { git = "https://github.com/cid-harvard/pandas-to-postgres.git", branch = "rewrite-updates" }
flask = "1.1.4"
itsdangerous = "1.1.0"
werkzeug = "0.16.1"
jinja2 = "2.11.3"
markupsafe = "1.1.1"
graphene-sqlalchemy = "^2.3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
